dsp-cli/tests/snapshots/vocabulary_describe_snapshots__vocabulary_describe_json_requested_node.snap
---
source: tests/vocabulary_describe_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0},"data":{"name":"epoch","iri":"http://rdfh.ch/lists/0838/epoch","labels":[{"value":"Period","language":"en"},{"value":"Epoche","language":"de"}],"comments":[],"nodes":6,"depth":3,"children":[{"node_iri":"http://rdfh.ch/lists/0838/prehistory","number":"1","name":"prehistory","labels":[{"value":"Prehistory","language":"en"},{"value":"Vorgeschichte","language":"de"},{"value":"Préhistoire","language":"fr"},{"value":"Preistoria","language":"it"}],"comments":[],"position":0,"children":[{"node_iri":"http://rdfh.ch/lists/0838/stoneAge","number":"1.1","name":"stoneAge","labels":[{"value":"Stone Age","language":"en"},{"value":"Steinzeit","language":"de"}],"comments":[{"value":"Includes Paleolithic, Mesolithic, and Neolithic sub-periods.","language":"en"}],"position":0,"children":[{"node_iri":"http://rdfh.ch/lists/0838/neolithic","number":"1.1.1","name":"neolithic","labels":[{"value":"Neolithic","language":"en"}],"comments":[],"position":0,"children":[]}]},{"node_iri":"http://rdfh.ch/lists/0838/bronzeAge","number":"1.2","name":"bronzeAge","labels":[{"value":"Bronze Age","language":null}],"comments":[],"position":1,"children":[]}]},{"node_iri":"http://rdfh.ch/lists/0838/antiquity","number":"2","name":null,"labels":[{"value":"Antiquity","language":"en"},{"value":"Classical Antiquity","language":"en"}],"comments":[],"position":1,"children":[]},{"node_iri":"http://rdfh.ch/lists/0838/modernPeriod","number":"3","name":"modernPeriod","labels":[{"value":"Modern Period","language":"en"}],"comments":[],"position":2,"children":[]}],"requested_node":"http://rdfh.ch/lists/0838/stoneAge"}}
