dsp-cli/tests/snapshots/vocabulary_describe_snapshots__vocabulary_describe_prose_requested_node.snap
---
source: tests/vocabulary_describe_snapshots.rs
expression: out
---
Vocabulary: epoch — Period / Epoche
Root: http://rdfh.ch/lists/0838/epoch
6 nodes · 3 levels ← you asked about 1.1

  1  Prehistory / Vorgeschichte / Préhistoire / Preistoria
    1.1  Stone Age / Steinzeit   ←
      1.1.1  Neolithic
    1.2  Bronze Age
  2  Antiquity
  3  Modern Period

[anonymous on api.dasch.swiss]
