dsp-cli/tests/snapshots/vocabulary_describe_snapshots__vocabulary_describe_prose_subtree_leaf.snap
---
source: tests/vocabulary_describe_snapshots.rs
expression: out
---
Vocabulary: epoch — Period / Epoche
Root: http://rdfh.ch/lists/0838/epoch
1 node · 1 level · subtree of 1.2

  1.2  Bronze Age   ←

[anonymous on api.dasch.swiss]
