dsp-cli/tests/snapshots/vocabulary_describe_snapshots__vocabulary_describe_tsv_stderr.snap
---
source: tests/vocabulary_describe_snapshots.rs
expression: buf_to_string(&err_buf)
---
[anonymous on api.dasch.swiss]
